# falconfs

./: .gitignore  CMakeLists.txt  build.sh
cloud_native/docker_build/store/: Dockerfile  start.sh  stop.sh
common/src/cm/: falcon_cm.cpp
common/src/include/cm/: falcon_cm.h
config/: config.json
deploy/: falcon_env.sh  falcon_start.sh
deploy/ansible/: install-openEuler22.03.sh  link_third_party_to.sh  link_to.sh
deploy/client/: falcon_client_start.sh  falcon_client_stop.sh
docker/: README-openeuler.md  openeuler24.03-dockerfile
falcon/: Makefile  falcon--1.0.sql  falcon_init.c  postgresql_plugin_config.conf
falcon/connection_pool/: connection_pool.c
falcon/control/: control_flag.c  control_func.c
falcon/distributed_backend/: remote_comm_falcon.c
falcon/include/plugin/: falcon_plugin_framework.h  falcon_plugin_loader.h
falcon/include/utils/: falcon_plugin_guc.h
falcon/metadb/: foreign_server.c  meta_handle.c  shard_table.c
falcon/plugin/: falcon_plugin_loader.c
falcon/transaction/: transaction.c  transaction_cleanup.c
falcon/utils/: utils.c
falcon_client/: fuse_main.cpp
falcon_client/src/: router.cpp
falcon_store/src/connection/: node.cpp
python_interface/: README.md  setup.py
python_interface/_pyfalconfs_internal/: CMakeLists.txt  _pyfalconfs_internal.cpp
python_interface/pyfalconfs/: __init__.py  pyfalconfs.py
rpm/: falconfs.spec
tests/: CMakeLists.txt
tests/falcon_plugin/: test_plugin_background.c  test_plugin_framework.cpp  test_plugin_framework.h  test_plugin_inline.c  test_plugin_invalid.c  test_plugin_loader.cpp
(+4 files in other folders)
